<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_insert_chart_black_24dp"
        android:title="@string/title_history"
        />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile"
        />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="Friends"
        />

</menu>
