<resources>
    <string name="app_name">Personal Best</string>
    <!-- Strings related to login -->
    <string name="create_an_account">Create an account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Personal Best</string>
    <string name="title_home">Home</string>

    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_home_btm_nav">HomeBtmNavActivity</string>

    <string name="title_activity_graph_btm_nav">GraphBtmNavActivity</string>
    <string name="title_activity_profile_btm_nav">ProfileBtmNavActivity</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="title_activity_encouragement_popup">encouragement_popup</string>
    <string name="step_goal_header">Step Goal</string>
    <string name="intentional_steps_header">Intentional Steps This Week</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_steps_header">Total Steps</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="goal_notify">You have reached your goals.</string>
</resources>
